sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	do{
		var ech=false;
		for(i<-0 to 8) {
			if(getValeur(i)>getValeur(i+1)){
				echange(i,i+1);
				ech=true;
			}
		}

	} while(ech==true)
}
